fixed scrollbar style

--- a/Extension/src/pages/common/components/ui/Select/select.pcss
+++ b/Extension/src/pages/common/components/ui/Select/select.pcss
@@ -46,8 +46,12 @@
             width: 4px;
         }
 
-        &::-webkit-scrollbar-thumb {
-            border-radius: 0;
+        *::-webkit-scrollbar-track {
+            background: var(--fills-backgrounds-page-background-additional-default); /* FIXME: opacity: 0.3 */
+        }
+
+        *::-webkit-scrollbar-thumb {
+            border-radius: 20px;
             background-color: var(--stroke-icons-gray-icons-disabled);
         }
     }
