--- a/Extension/src/pages/filtering-log/styles/common.pcss
+++ b/Extension/src/pages/filtering-log/styles/common.pcss
@@ -24,7 +24,6 @@ body,
 *::-webkit-scrollbar-thumb {
     background-color: var(--stroke-icons-gray-icons-disabled);
     border-radius: 20px;
-    border: 3px solid var(--fills-backgrounds-page-background-additional-default); /* FIXME: opacity: 0.3 */
 }
 
 *::-webkit-scrollbar-corner {
