--- a/Extension/src/pages/popup/components/Tabs/tabs.pcss
+++ b/Extension/src/pages/popup/components/Tabs/tabs.pcss
@@ -37,17 +37,13 @@
             width: 6px;
         }
 
-        /* FIXME: check if needed */
-        &::-webkit-scrollbar-track {
-            /* FIXME: Color */
-            background: var(--fills-loaders-background-default);
+        *::-webkit-scrollbar-track {
+            background: var(--fills-backgrounds-page-background-additional-default); /* FIXME: opacity: 0.3 */
         }
 
-        /* FIXME: check if needed */
-        &::-webkit-scrollbar-thumb {
-            /* FIXME: Color */
-            background-color: var(--fills-loaders-background-default);
-            border-radius: 4px;
+        *::-webkit-scrollbar-thumb {
+            background-color: var(--stroke-icons-gray-icons-disabled);
+            border-radius: 20px;
         }
     }
 
